nginx-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - name: app
      protocol: TCP
      port: 80
      targetPort: 8092
      nodePort: 31000
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-phpfpm
  labels:
     app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
         app: nginx
    spec:
     containers:
     - name: nginx-container
       image: nginx:latest
       volumeMounts:
        - name: shared-files
          mountPath: /var/www/html/index.php
          subPath: index.php
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
     - name: php-fpm-container
       image: php:7.0-fpm
       volumeMounts:
        - name: shared-files
          mountPath: /var/www/html/index.php
          subPath: index.php
#     - name: mozjpeg
#       image: egorovli/mozjpeg
     volumes:
     - name: shared-files
       configMap:
        name: php-config
     - name: nginx-config-volume
       configMap:
        name: nginx-config
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: php-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: phptest.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: php-service
          servicePort: app
  - host: www.mozjpeg.com
    http:
      paths:
      - path: /
        backend:
          serviceName: php-service
          servicePort: app
